--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "version": "0.0.1",
     "private": false,
     "dependencies": {
-        "express": "4.13.1",
+        "express": "4.13.1"
   }
 }
